// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingStars /> renders with value of 0 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo "
  data-test-id="ratedStars: 0"
>
  <div
    className="css-4s85e9 rating-stars-empty"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin rating-stars-filled"
  />
</div>
`;

exports[`<RatingStars /> renders with value of 50 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo "
  data-test-id="ratedStars: 2.5"
>
  <div
    className="css-4s85e9 rating-stars-empty"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin rating-stars-filled"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <StarHalfIcon
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders with value of 100 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo "
  data-test-id="ratedStars: 5"
>
  <div
    className="css-4s85e9 rating-stars-empty"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin rating-stars-filled"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="8"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="9"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="10"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 1`] = `
<div
  aria-hidden={true}
  className="css-13azwyo "
  data-test-id="ratedStars: 5"
>
  <div
    className="css-4s85e9 rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="9"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="10"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 2`] = `
<div
  aria-hidden={true}
  className="css-13azwyo "
  data-test-id="ratedStars: 3.5"
>
  <div
    className="css-4s85e9 rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="css-kdb68h css-q4owmg"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="css-kdb68h css-q4owmg"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <StarHalfIcon
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;
